Update portfolio title and image formats

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHHATRAOAL - Artist Portfolio</title>
+    <title>CHITRASEN - Artist Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,19 +74,19 @@
 
             <div class="portfolio-grid">
                 <div class="portfolio-item" data-category="digital">
-                    <img src="20250921_113156.heic" alt="Portfolio Image 1">
+                    <img src="20250921_113156.jpg" alt="Portfolio Image 1">
                 </div>
                 <div class="portfolio-item" data-category="digital">
-                    <img src="20250921_113623.heic" alt="Portfolio Image 2">
+                    <img src="20250921_113623.jpg" alt="Portfolio Image 2">
                 </div>
                 <div class="portfolio-item" data-category="digital">
-                    <img src="20250921_113749.heic" alt="Portfolio Image 3">
+                    <img src="20250921_113749.jpg" alt="Portfolio Image 3">
                 </div>
                 <div class="portfolio-item" data-category="digital">
-                    <img src="20250921_113830.heic" alt="Portfolio Image 4">
+                    <img src="20250921_113830.jpg" alt="Portfolio Image 4">
                 </div>
                 <div class="portfolio-item" data-category="digital">
-                    <img src="20250921_114202.heic" alt="Portfolio Image 5">
+                    <img src="20250921_114004.jpg" alt="Portfolio Image 5">
                 </div>
                 <div class="portfolio-item" data-category="digital">
                     <img src="IMG-20241107-WA0028(1).jpg" alt="Portfolio Image 6">
