--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHITRASEN - Artist Portfolio</title>
+    <title>CHHATRAOAL - Artist Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,29 +63,75 @@
                 <h2 class="section-title">Portfolio</h2>
                 <p class="section-subtitle">A collection of living artworks</p>
             </div>
+            
+            <div class="portfolio-categories">
+                <button class="category-btn active" data-category="all">All</button>
+                <button class="category-btn" data-category="portraits">Portraits</button>
+                <button class="category-btn" data-category="landscapes">Landscapes</button>
+                <button class="category-btn" data-category="abstract">Abstract</button>
+                <button class="category-btn" data-category="digital">Digital</button>
+            </div>
+
             <div class="portfolio-grid">
+                <!-- Artworks are now hardcoded here -->
                 <div class="portfolio-item" data-category="digital">
-                    <img src="20250921_113156.jpg" alt="Portfolio Image 1">
+                    <div class="portfolio-image">
+                        <img src="20250921_113156.jpg" alt="Artwork 1">
+                    </div>
+                    <div class="portfolio-content">
+                        <h3 class="portfolio-title">Cosmic Bloom</h3>
+                        <span class="portfolio-category">Digital Art</span>
+                    </div>
+                </div>
+                <div class="portfolio-item" data-category="portraits">
+                    <div class="portfolio-image">
+                        <img src="20250921_113623.jpg" alt="Artwork 2">
+                    </div>
+                     <div class="portfolio-content">
+                        <h3 class="portfolio-title">Celestial Gaze</h3>
+                        <span class="portfolio-category">Portrait</span>
+                    </div>
+                </div>
+                <div class="portfolio-item" data-category="abstract">
+                    <div class="portfolio-image">
+                        <img src="20250921_113749.jpg" alt="Artwork 3">
+                    </div>
+                     <div class="portfolio-content">
+                        <h3 class="portfolio-title">Liquid Dreams</h3>
+                        <span class="portfolio-category">Abstract</span>
+                    </div>
                 </div>
                 <div class="portfolio-item" data-category="digital">
-                    <img src="20250921_113623.jpg" alt="Portfolio Image 2">
+                    <div class="portfolio-image">
+                        <img src="20250921_113830.jpg" alt="Artwork 4">
+                    </div>
+                     <div class="portfolio-content">
+                        <h3 class="portfolio-title">Future's Past</h3>
+                        <span class="portfolio-category">Digital Art</span>
+                    </div>
                 </div>
-                <div class="portfolio-item" data-category="digital">
-                    <img src="20250921_113749.jpg" alt="Portfolio Image 3">
+                <div class="portfolio-item" data-category="landscapes">
+                    <div class="portfolio-image">
+                        <img src="20250921_114202.jpg" alt="Artwork 5">
+                    </div>
+                     <div class="portfolio-content">
+                        <h3 class="portfolio-title">Neon Valley</h3>
+                        <span class="portfolio-category">Landscape</span>
+                    </div>
                 </div>
-                <div class="portfolio-item" data-category="digital">
-                    <img src="20250921_113830.jpg" alt="Portfolio Image 4">
-                </div>
-                <div class="portfolio-item" data-category="digital">
-                    <img src="20250921_114004.jpg" alt="Portfolio Image 5">
-                </div>
-                <div class="portfolio-item" data-category="digital">
-                    <img src="IMG-20241107-WA0028(1).jpg" alt="Portfolio Image 6">
+                <div class="portfolio-item" data-category="abstract">
+                    <div class="portfolio-image">
+                        <img src="IMG-20241107-WA0028(1).jpg" alt="Artwork 6">
+                    </div>
+                     <div class="portfolio-content">
+                        <h3 class="portfolio-title">Chroma Flow</h3>
+                        <span class="portfolio-category">Abstract</span>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <!-- About Section -->
+        <!-- About Section (and others) remain the same -->
         <section id="about" class="section about-section">
             <div class="about-container">
                 <div class="about-visual">
@@ -124,7 +170,6 @@
             </div>
         </section>
 
-        <!-- Contact Section -->
         <section id="contact" class="section contact-section">
             <div class="contact-container">
                 <h2 class="contact-title">Let's Create Together</h2>
