--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHITRASEN - Artist Portfolio</title>
+    <title>CHHATRAOAL - Artist Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -80,7 +80,6 @@
                     </div>
                     <div class="portfolio-content">
                         <h3 class="portfolio-title">Cosmic Bloom</h3>
-                        <span class="portfolio-category">Digital Art</span>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="portraits">
@@ -89,7 +88,6 @@
                     </div>
                      <div class="portfolio-content">
                         <h3 class="portfolio-title">Celestial Gaze</h3>
-                        <span class="portfolio-category">Portrait</span>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="abstract">
@@ -98,7 +96,6 @@
                     </div>
                      <div class="portfolio-content">
                         <h3 class="portfolio-title">Liquid Dreams</h3>
-                        <span class="portfolio-category">Abstract</span>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="digital">
@@ -107,7 +104,6 @@
                     </div>
                      <div class="portfolio-content">
                         <h3 class="portfolio-title">Future's Past</h3>
-                        <span class="portfolio-category">Digital Art</span>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="landscapes">
@@ -116,7 +112,6 @@
                     </div>
                      <div class="portfolio-content">
                         <h3 class="portfolio-title">Neon Valley</h3>
-                        <span class="portfolio-category">Landscape</span>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="abstract">
@@ -125,7 +120,6 @@
                     </div>
                      <div class="portfolio-content">
                         <h3 class="portfolio-title">Chroma Flow</h3>
-                        <span class="portfolio-category">Abstract</span>
                     </div>
                 </div>
             </div>
