Update stylesheet and script version in index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHITRASEN - The Artist's World</title>
-    <!-- v=2.1 forces the browser to load the new file -->
-    <link rel="stylesheet" href="styles.css?v=2.1">
+    <!-- v=2.3 ensures the browser loads the latest files -->
+    <link rel="stylesheet" href="styles.css?v=2.3">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Cinzel+Decorative:wght@700&family=Rajdhani:wght@300;500&display=swap" rel="stylesheet">
@@ -58,7 +58,8 @@
         <section id="about" class="content-section about-section">
             <div class="about-container">
                 <div class="about-image">
-                    <img src="20250921_113623.jpg" alt="Artist Portrait">
+                    <!-- IMAGE HAS BEEN UPDATED HERE -->
+                    <img src="RAJU IMAGE.jpg" alt="Artist Portrait">
                 </div>
                 <div class="about-content">
                     <h2 class="section-title">ABOUT THE ARTIST</h2>
@@ -79,6 +80,6 @@
         </section>
     </main>
 
-    <script src="script.js?v=2.1"></script>
+    <script src="script.js?v=2.3"></script>
 </body>
 </html>
