Update links and version in index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHITRASEN - The Artist's World</title>
-    <!-- v=2.3 ensures the browser loads the latest files -->
-    <link rel="stylesheet" href="styles.css?v=2.3">
+    <!-- v=2.4 ensures the browser loads the latest files -->
+    <link rel="stylesheet" href="styles.css?v=2.4">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Cinzel+Decorative:wght@700&family=Rajdhani:wght@300;500&display=swap" rel="stylesheet">
@@ -58,7 +58,6 @@
         <section id="about" class="content-section about-section">
             <div class="about-container">
                 <div class="about-image">
-                    <!-- IMAGE HAS BEEN UPDATED HERE -->
                     <img src="RAJU IMAGE.jpg" alt="Artist Portrait">
                 </div>
                 <div class="about-content">
@@ -69,10 +68,10 @@
                     <div class="social-links-container">
                         <h3>CONNECT WITH ME</h3>
                         <div class="social-links">
-                            <a href="#" title="Instagram">📷</a>
-                            <a href="#" title="Behance">🎨</a>
-                            <a href="#" title="Twitter / X">🐦</a>
-                            <a href="#" title="Email">📧</a>
+                            <!-- UPDATED Instagram Link -->
+                            <a href="https://www.instagram.com/chitrasen.art_gallery?igsh=MTRweWlldXpoemhwNQ==" title="Instagram" target="_blank" rel="noopener noreferrer">📷</a>
+                            <!-- UPDATED Email Link -->
+                            <a href="mailto:sahuraju45870@gmail.com" title="Email">📧</a>
                         </div>
                     </div>
                 </div>
@@ -80,6 +79,6 @@
         </section>
     </main>
 
-    <script src="script.js?v=2.3"></script>
+    <script src="script.js?v=2.4"></script>
 </body>
 </html>
