Revise styles and enhance portfolio item display
Updated stylesheet and script version for new design. Enhanced portfolio items with overlay and view icon.

Signed-off-by: Chitrasen Sahu <chitra_1657@aaft.edu.in>

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHITRASEN - The Artist's World</title>
-    <!-- v=2.4 ensures the browser loads the latest files -->
-    <link rel="stylesheet" href="styles.css?v=2.4">
+    <!-- v=3.0 for the new Professional look -->
+    <link rel="stylesheet" href="styles.css?v=3.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Cinzel+Decorative:wght@700&family=Rajdhani:wght@300;500&display=swap" rel="stylesheet">
@@ -44,13 +44,31 @@
         <section id="portfolio" class="content-section">
             <h2 class="section-title">PORTFOLIO</h2>
             <div class="portfolio-grid">
-                <!-- Your 6 Images -->
-                <div class="portfolio-item"><img src="20250921_113156.jpg" alt="Artwork 1"></div>
-                <div class="portfolio-item"><img src="20250921_113623.jpg" alt="Artwork 2"></div>
-                <div class="portfolio-item"><img src="20250921_113749.jpg" alt="Artwork 3"></div>
-                <div class="portfolio-item"><img src="20250921_113830.jpg" alt="Artwork 4"></div>
-                <div class="portfolio-item"><img src="20250921_114202.jpg" alt="Artwork 5"></div>
-                <div class="portfolio-item"><img src="IMG-20241107-WA0028(1).jpg" alt="Artwork 6"></div>
+                <!-- Portfolio items now include an overlay and icon for the new hover effect -->
+                <div class="portfolio-item">
+                    <img src="20250921_113156.jpg" alt="Artwork 1">
+                    <div class="overlay"><div class="view-icon">👁</div></div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="20250921_113623.jpg" alt="Artwork 2">
+                    <div class="overlay"><div class="view-icon">👁</div></div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="20250921_113749.jpg" alt="Artwork 3">
+                    <div class="overlay"><div class="view-icon">👁</div></div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="20250921_113830.jpg" alt="Artwork 4">
+                    <div class="overlay"><div class="view-icon">👁</div></div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="20250921_114202.jpg" alt="Artwork 5">
+                    <div class="overlay"><div class="view-icon">👁</div></div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="IMG-20241107-WA0028(1).jpg" alt="Artwork 6">
+                    <div class="overlay"><div class="view-icon">👁</div></div>
+                </div>
             </div>
         </section>
 
@@ -68,9 +86,7 @@
                     <div class="social-links-container">
                         <h3>CONNECT WITH ME</h3>
                         <div class="social-links">
-                            <!-- UPDATED Instagram Link -->
                             <a href="https://www.instagram.com/chitrasen.art_gallery?igsh=MTRweWlldXpoemhwNQ==" title="Instagram" target="_blank" rel="noopener noreferrer">📷</a>
-                            <!-- UPDATED Email Link -->
                             <a href="mailto:sahuraju45870@gmail.com" title="Email">📧</a>
                         </div>
                     </div>
@@ -79,6 +95,6 @@
         </section>
     </main>
 
-    <script src="script.js?v=2.4"></script>
+    <script src="script.js?v=3.0"></script>
 </body>
 </html>
